version/0.15/_sources/api/ansys/dpf/core/operators/result/erp_radiation_efficiency/InputsErpRadiationEfficiency.rst.txt






:class:`InputsErpRadiationEfficiency`
=====================================


.. py:class:: ansys.dpf.core.operators.result.erp_radiation_efficiency.InputsErpRadiationEfficiency(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   erp_radiation_efficiency operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> my_fields_container = dpf.FieldsContainer()
   >>> op.inputs.fields_container.connect(my_fields_container)
   >>> my_mesh = dpf.MeshedRegion()
   >>> op.inputs.mesh.connect(my_mesh)
   >>> my_time_scoping = int()
   >>> op.inputs.time_scoping.connect(my_time_scoping)
   >>> my_mass_density = float()
   >>> op.inputs.mass_density.connect(my_mass_density)
   >>> my_speed_of_sound = float()
   >>> op.inputs.speed_of_sound.connect(my_speed_of_sound)






.. py:currentmodule:: InputsErpRadiationEfficiency

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~fields_container`
            - Allows to connect fields_container input to the operator.
          * - :py:attr:`~mesh`
            - Allows to connect mesh input to the operator.
          * - :py:attr:`~time_scoping`
            - Allows to connect time_scoping input to the operator.
          * - :py:attr:`~mass_density`
            - Allows to connect mass_density input to the operator.
          * - :py:attr:`~speed_of_sound`
            - Allows to connect speed_of_sound input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.result.erp_radiation_efficiency import InputsErpRadiationEfficiency

Property detail
---------------

.. py:property:: fields_container
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.fields_container.FieldsContainer]


   Allows to connect fields_container input to the operator.

   the input field container expects displacements fields

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> op.inputs.fields_container.connect(my_fields_container)
   >>> # or
   >>> op.inputs.fields_container(my_fields_container)

.. py:property:: mesh
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.meshed_region.MeshedRegion | ansys.dpf.core.meshes_container.MeshesContainer]


   Allows to connect mesh input to the operator.

   the meshes region in this pin has to be boundary or skin mesh

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> op.inputs.mesh.connect(my_mesh)
   >>> # or
   >>> op.inputs.mesh(my_mesh)

.. py:property:: time_scoping
   :type: ansys.dpf.core.inputs.Input[int | ansys.dpf.core.scoping.Scoping]


   Allows to connect time_scoping input to the operator.

   load step number (if it's specified, the ERP is computed only on the substeps of this step) or time scoping

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> op.inputs.time_scoping.connect(my_time_scoping)
   >>> # or
   >>> op.inputs.time_scoping(my_time_scoping)

.. py:property:: mass_density
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect mass_density input to the operator.

   mass density (if it's not specified, default value of the air is applied).

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> op.inputs.mass_density.connect(my_mass_density)
   >>> # or
   >>> op.inputs.mass_density(my_mass_density)

.. py:property:: speed_of_sound
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect speed_of_sound input to the operator.

   speed of sound (if it's not specified, default value of the speed of sound in the air is applied).

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.result.erp_radiation_efficiency()
   >>> op.inputs.speed_of_sound.connect(my_speed_of_sound)
   >>> # or
   >>> op.inputs.speed_of_sound(my_speed_of_sound)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




